# vidore3-ablations

./: .gitignore  README.md  pyproject.toml
configs/: ablations.yaml  ablations_rtx4070_8gb.yaml
scripts/: smoke_test.ps1
src/vidore3_ablations/: __init__.py  analyze_results.py  data.py  device_utils.py  evaluator.py  fiftyone_integration.py  fiftyone_utils.py  grounding.py  launch_fiftyone.py  low_vram.py  metric_definitions.py  query_intent.py  results_io.py  run_ablations.py  visualize_results.py
src/vidore3_ablations/cli/: analyze.py  config.py  explore.py  main.py  run.py  viz.py
src/vidore3_ablations/data/: __init__.py  dataset.py  loader.py  subsample.py
src/vidore3_ablations/eval/: __init__.py  aggregate.py  grounding.py  retrieval.py
src/vidore3_ablations/explore/: __init__.py  boxes.py  dataset.py
src/vidore3_ablations/hardware/: __init__.py  device.py  vram.py
src/vidore3_ablations/metrics/: __init__.py  definitions.py  grounding.py
src/vidore3_ablations/pipelines/: __init__.py  base.py  bm25.py  clip_visual.py  colpali.py  dense_text.py  hybrid.py  jina_omni.py  query_intent_graph.py  random.py  registry.py  utils.py
src/vidore3_ablations/results/: __init__.py  io.py  plots.py
tests/: test_query_intent.py
