[project]
name = "vidore3-ablations"
version = "0.2.0"
description = "Ablation study of visual document retrieval on ViDoRe v3 technical documents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytrec-eval-terrier>=0.5.6",
    "datasets>=2.18.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "transformers>=4.40.0",
    "torch>=2.2.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "colpali-engine>=0.3.1",
]

[project.optional-dependencies]
fiftyone = [
    "fiftyone>=1.0.0",
]

[project.scripts]
vidore3 = "vidore3_ablations.cli.main:main"
vidore3-ablate = "vidore3_ablations.cli.run:main"
vidore3-analyze = "vidore3_ablations.cli.analyze:main"
vidore3-viz = "vidore3_ablations.cli.viz:main"
vidore3-explore = "vidore3_ablations.cli.explore:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
