[project]
name = "vidore3-ablations"
version = "0.1.0"
description = "Ablation study of visual document retrieval on ViDoRe v3 technical documents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytrec-eval-terrier>=0.5.6",
    "datasets>=2.18.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.2",
    "transformers>=5.0.0",
    "torch>=2.5.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "colpali-engine>=0.3.1",
]

[project.scripts]
vidore3-ablate = "vidore3_ablations.run_ablations:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
